<resources>
    <string name="app_name">Chatoo</string>
    <string name="usernameHint">Username</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="chatoo">Chatoo..</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="login_page">Login Page</string>
    <string name="profile">profile</string>
    <string name="search">Search...</string>
    <string name="seen">Seen</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_address">Email Address</string>
    <string name="warning_msg">By Clicking RESET Button, you will receive an email to reset password</string>
    <string name="reset">Reset</string>
</resources>